.archive/clusters/homelab-1/.network-policies/allow-egress-to-prometheus/destination/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-prometheus
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/instance: kube-prometheus-stack-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              networking/allow-egress-to-prometheus: "true"
      ports:
        - protocol: TCP
          port: 9090
